# recruiting-sw-Telemetry-project1

./: CMakeLists.txt  README.md  readme.md  run.sh
Code/core/: app.cpp  main.cpp
core/: adminUser.cpp  adminUser.h  app.cpp  app.h  app.h:Zone.Identifier  basicUser.cpp  basicUser.h  bms.cpp  bms.h  carPreviewWindow.cpp  car_preview.cpp  data.cpp  data.h  dataBase.cpp  dataBase.h  electronic.cpp  electronicWindow.cpp  error.h  errorsWindow.cpp  image.cpp  image.h  main.cpp  maintainerUser.cpp  maintainerUser.h  motor.cpp  motor.h  motorWindow.cpp  overview.cpp  profile.cpp  profileWindow.cpp  telemetry.cpp  telemetry.h  temperature.cpp  temperature.h  track.cpp  track.h  trackSessionWindow.cpp  track_session.cpp  tyre.cpp  tyre.h  (+3 more)
